--- a/src/components/Comments/index.css
+++ b/src/components/Comments/index.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   min-height: 100vh;
   font-family: 'roboto';
+  padding: 40px;
 }
 .comment-card {
   display: flex;
@@ -12,6 +13,7 @@
 .input-container {
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
   width: 45%;
 }
 .heading {
@@ -22,10 +24,12 @@
 }
 .name-input {
   font-size: 18px;
+  margin-bottom: 20px;
 }
 .text-area-input {
   width: 100%;
   height: 100px;
+  margin-bottom: 40px;
 }
 
 .comment-button {
